# libstepparser

./: .gitignore  CMakeLists.txt  README.md
cmake/: StepParseConfig.cmake.in  StepParserConfig.cmake.in  stepparseConfig.cmake.in
include/: step_parser.h
include/stp/: parse.hpp  step_parse.hpp
src/step/: parse.cpp  step_entities.cpp  step_entities.h  step_entities.hpp  step_loader.cpp  step_loader.h  step_loader.hpp  step_parser.cpp  step_parser.h  step_parser.hpp  step_reader.h  step_reader.hpp  step_tokenizer.cpp  step_tokenizer.h  step_tokenizer.hpp
src/tokenizer/: token.cpp  token.h  token.hpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp
src/util/: debug.h  debug.hpp  to_string.cpp  to_string.h  to_string.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt
